--- a/.github/workflows/build-publish-binary.yml
+++ b/.github/workflows/build-publish-binary.yml
@@ -1,17 +1,15 @@
 name: Build and Publish to Registry
 
 on:
-    schedule:
-        - cron: '0 01 * * *' # Everyday at 1am
-    push:
-        branches:
-            - main
+  schedule:
+    - cron: '0 01 * * *' # Everyday at 1am
+  push:
+    branches: [ "main" ]
 
 jobs:
-    build:
-      runs-on: ubuntu-latest
-        
-      steps:
+  build:
+    runs-on: ubuntu-latest
+    steps:
         - name: Check out repository
           uses: actions/checkout@v2
 
@@ -19,13 +17,13 @@ jobs:
           uses: actions/setup-go@v3
           with:
             go-version: '1.17.3'
-    
+
         - name: Build for Linux AMD64
           env:
             GOOS: linux
             GOARCH: amd64
           run: go build -o terraform-provider-aws-linux
-        
+
         - name: Build for Mac AMD64
           env:
             GOOS: darwin
