--- a/.github/workflows/build-publish-binary.yml
+++ b/.github/workflows/build-publish-binary.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      
+
       - name: Read and update provider version
         id: get_version
         run: |
@@ -39,7 +39,7 @@ jobs:
 
       - name: Push Linux Binary to Artifactory
         env:
-          ARTIFACTORY_ENV: dev
+          ARTIFACTORY_ENV: prod
           ARTIFACTORY_REGION: use1
         run: |
           artifactory-push generic \
@@ -51,7 +51,7 @@ jobs:
 
       - name: Push Mac Binary to Artifactory
         env:
-          ARTIFACTORY_ENV: dev
+          ARTIFACTORY_ENV: prod
           ARTIFACTORY_REGION: use1
         run: |
           artifactory-push generic \
