--- a/.github/workflows/build-publish-binary.yml
+++ b/.github/workflows/build-publish-binary.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Read and update provider version
         id: get_version
@@ -21,9 +21,9 @@ jobs:
           echo $NEW_VERSION > pinterest-version.txt
 
       - name: Set up Go environment
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 # v5.3.0
         with:
-          go-version: '1.17.3'
+          go-version: go.mod
 
       - name: Build for Linux AMD64
         env:
