Changing Branch name for Testing

--- a/.github/workflows/build-publish-binary.yml
+++ b/.github/workflows/build-publish-binary.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '0 01 * * *' # Everyday at 1am
   push:
-    branches: ["main"]
+    branches: ["sanjay/release_pipeline"]
 
 jobs:
   build:
